# spmdfy

./: .clang-format  .gitignore  CMakeLists.txt  Design.md  LICENSE  README.md  schema.json
cmake/: FindISPC.cmake  FindSPMDfy.cmake
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.dox  conf.py  index.rst
examples/: CMakeLists.txt
examples/CUDA_Features/: CMakeLists.txt
examples/CUDA_Features/Atomic/: CMakeLists.txt  Makefile  atomic.cu  atomic.cuh  main.cu
examples/CUDA_Features/Shared_Memory/: CMakeLists.txt  Makefile  main.cu  shared_memory.cu  shared_memory.cuh  shared_memory_ispc.h
examples/CUDA_Features/Structs/: struct.cu
examples/Variables/: variables.cu
examples/atomic/: atomic.cu  atomic.ispc
examples/finite_difference/: Makefile  finite_difference.cu  finite_difference.ispc  main.cu
examples/reduce/: CMakeLists.txt  main.cu  reduce.cu  reduce.cuh
examples/saxpy/: CMakeLists.txt  Makefile  main.cu  saxpy.cu  saxpy.cuh  saxpy.ispc
examples/transpose/: CMakeLists.txt  Makefile  main.cu  transpose.cu  transpose.cuh  transpose.ispc
examples/utils/: cuda_utils.cuh
examples/variables/: variables.cu
include/spmdfy/: CUDA2ISPC.hpp  CommandLineOpts.hpp  Format.hpp  Logger.hpp  SpmdfyAction.hpp  SpmdfyStmtVisitor.hpp  utils.hpp
include/spmdfy/CFG/: CFG.hpp  CFGVisitor.hpp  RecursiveCFGVisitor.hpp
include/spmdfy/Generator/: Generator.hpp  SimpleGenerator.hpp
include/spmdfy/Generator/CFGGenerator/: CFG.hpp  CFGCodeGen.hpp  CFGGenerator.hpp  ConstructCFG.hpp
include/spmdfy/Pass/: PassHandler.hpp  PassManager.hpp  PassSequence.hpp  PassWorkspace.hpp
include/spmdfy/Pass/Passes/: DetectPartialNodes.hpp  DuplicatePartialNodes.hpp  FindSyncthreadNodes.hpp  HoistShmemNodes.hpp  InsertISPCNodes.hpp  LocateASTNodes.hpp  PrintCFGPass.hpp  PrintReverseCFGPass.hpp
src/: CUDA2ISPC.cpp  CommandLineOpts.cpp  Format.cpp  Logger.cpp  SpmdfyAction.cpp  SpmdfyStmtVisitor.cpp  main.cpp  utils.cpp
src/CFG/: CFG.cpp
src/Generator/: ISPCMacros.cpp  SimpleGenerator.cpp
src/Generator/CFGGenerator/: CFG.cpp  CFGCodeGen.cpp  CFGGenerator.cpp  ConstructCFG.cpp
src/Pass/: PassManager.cpp
src/Pass/Passes/: DetectPartialNodes.cpp  DuplicatePartialNodes.cpp  FindSyncthreadNodes.cpp  HoistShmemNodes.cpp  InsertISPCNodes.cpp  LocateASTNodes.cpp  PrintCFGPass.cpp  PrintReverseCFGPass.cpp
tools/: nvcc_to_cuda_clang.py
